# amr-grasping

./: README.md
limo_explore/: CMakeLists.txt  package.xml
limo_explore/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
limo_explore/launch/: frontier_demo.launch  nav.launch  object_detection.launch  rviz.launch  straight_demo.launch
limo_explore/rviz/: explore.rviz
limo_explore/scripts/: cam_coverage.py  frontier_planner.py  object_finder.py  straight_planner.py
traj_logs/env1_state1_nbv/: traj_20251123_143415.txt  traj_20251123_144023.txt  traj_20251123_144305.txt  traj_20251123_144537.txt  traj_20251123_145655.txt
traj_logs/env1_state1_str/: traj_20251125_012939.txt  traj_20251125_013356.txt  traj_20251125_013807.txt  traj_20251125_014320.txt  traj_20251125_014750.txt
traj_logs/env1_state2_nbv/: traj_20251124_160051.txt  traj_20251124_193621.txt  traj_20251124_233157.txt  traj_20251124_233520.txt  traj_20251124_235547.txt
traj_logs/env1_state2_str/: traj_20251125_015212.txt  traj_20251125_015520.txt  traj_20251125_015901.txt  traj_20251125_020259.txt  traj_20251125_021756.txt
traj_logs/env1_state3_nbv/: traj_20251125_000702.txt  traj_20251125_001022.txt  traj_20251125_003041.txt  traj_20251125_003450.txt  traj_20251125_003803.txt
traj_logs/env1_state3_str/: traj_20251125_022647.txt  traj_20251125_023451.txt  traj_20251125_023933.txt  traj_20251125_025121.txt  traj_20251125_025502.txt
traj_logs/env2_state1_nbv/: traj_20251127_032724.txt  (+4 more)
(+25 files in other folders)
